# teams_notifier

./: pyproject.toml  test.py
teams_notifier/: notifier.py
